Added forum and updated nav

--- a/demo.html
+++ b/demo.html
@@ -26,7 +26,7 @@
             <li style="display: inline"><a href="collab.html" class="nav-list">Collaborate</a></li>
             <li style="display: inline"><a href="docs.html" class="nav-list">Documentation</a></li>
             <li style="display: inline"><a href="dev.html" class="nav-list">Development</a></li>
-            <li style="display: inline"><a href="forum.html" class="nav-list">Forum</a></li>
+            <li style="display: inline"><a href="http://orangesensorsapis.freeforums.net/" class="nav-list">Forum</a></li>
           </ul>
         </div>
       </div>
@@ -64,12 +64,12 @@
           <div class="col-md-9 nopadding main-content">
 
             <!-- Final Product -->
-            <h2>Final Product</h2>
+            <h2 style="margin-top: 12px">Final Product</h2>
             <a class="anchor" id="final"></a>
             <hr>
-            <ul>
-              <li>Basically just a link to the /parking/ website with a brief description</li>
-            </ul>
+            <h4 style="font-weight: lighter">Our clients tasked us with developing a smart-parking application, built upon the larger sensor network platform. The application was to indicate the state of street-side parking bays across london - where they were, how long they'd been occupied for, whether it was legal to park there, and more. Since starting the project, we've prototyped various hardare for parking bay monitors and produced a fully functioning web app.</h4>
+            <h4 style="text-align: center"><a href="http://victokoh.cs.ucl.ac.uk/parking/">Click here to try our smart-parking app</a></h4><br>
+            <p>Of course, a lot of planning and design went into every aspect of this demonstration of the system in use. See below for a detailed analysis of how exactly we did it, and discover how the sensors network streamlines the development process.</p>
 
             <!-- Design -->
             <h2>Design</h2>
@@ -80,6 +80,10 @@
               <li>Will include talking about the databases</li>
               <li>Brief description of how to achieve it</li>
             </ul>
+            <div class="imgborder">
+              <img class="img-responsive img-rounded" style="margin-left: auto; margin-right: auto;" src="img/icons_legend.png">
+              <p>The custom icons used in our application to indicate the state of a given parking bay.</p>
+            </div>
             
             <!-- Java API -->
             <h2>Using the Java API for analytics</h2>
