--- a/dev.html
+++ b/dev.html
@@ -26,7 +26,7 @@
             <li style="display: inline"><a href="collab.html" class="nav-list">Collaborate</a></li>
             <li style="display: inline"><a href="docs.html" class="nav-list">Documentation</a></li>
             <li style="display: inline"><a href="" class="nav-list onpage">Development</a></li>
-            <li style="display: inline"><a href="forum.html" class="nav-list">Forum</a></li>
+            <li style="display: inline"><a href="http://orangesensorsapis.freeforums.net/" class="nav-list">Forum</a></li>
           </ul>
         </div>
       </div>
