--- a/collab.html
+++ b/collab.html
@@ -26,7 +26,7 @@
             <li style="display: inline"><a href="" class="nav-list onpage">Collaborate</a></li>
             <li style="display: inline"><a href="docs.html" class="nav-list">Documentation</a></li>
             <li style="display: inline"><a href="dev.html" class="nav-list">Development</a></li>
-            <li style="display: inline"><a href="forum.html" class="nav-list">Forum</a></li>
+            <li style="display: inline"><a href="http://orangesensorsapis.freeforums.net/" class="nav-list">Forum</a></li>
           </ul>
         </div>
       </div>
