Updating styles to fix aesthetic issues

--- a/dev.html
+++ b/dev.html
@@ -63,7 +63,7 @@
           <div class="col-md-9 nopadding main-content">
 
             <!-- The Team -->
-            <h2>The Team</h2>
+            <h2 style="margin-top: 12px">The Team</h2>
             <a class="anchor" id="team"></a>
             <hr>
             <ul>
