--- a/docs.html
+++ b/docs.html
@@ -62,7 +62,7 @@
           <div class="col-md-9 nopadding main-content">
 
             <!-- Sensors website -->
-            <h2>Building the Orange Sensors Network</h2>
+            <h2 style="margin-top: 12px">Building the Orange Sensors Network</h2>
             <a class="anchor" id="network"></a>
             <hr>
             <ul>
