--- a/collab.html
+++ b/collab.html
@@ -37,7 +37,7 @@
       <div class="container">
         <div>
           <h1 style="color: #f60">Collaborate</h1>
-          <p class="pageblurb">Some appropriate graphics and text saying something to the effect of "Help us grow"</p><br>
+          <p class="pageblurb">Like what you see? We're running a number of open-source initiatives, and depend upon community developers to help us to grow. If you're looking for info on how to get involved, this is it.</p><br>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
             <div class="affix-top" id="sidebar" data-spy="affix">
                 <ul class="nav hidden-xs hidden-sm">
                   <li style="background-color: #1b1b1b; padding-top: 10px; border-top-left-radius: 10px; border-top-right-radius: 10px; border: 1px #eee solid"><span style="padding: 16px; color: #fff">Navigation</span><p></li>
-                  <li><a href="#progress">Moving Forward</a></li>
+                  <li><a href="#progress">Next Steps</a></li>
                   <li><a href="#goals">Future Goals</a></li>
                   <li><a href="#getinvolved">Get Involved</a></li>
                 </ul>
@@ -62,9 +62,10 @@
           <div class="col-md-9 nopadding main-content">
 
             <!-- Moving Forward -->
-            <h2>Moving Forward</h2>
+            <h2 style="margin-top: 12px">Next Steps</h2>
             <a class="anchor" id="progress"></a>
             <hr>
+            <h4 style="font-weight: lighter"></h4>
             <ul>
               <li>Plans or ideas we have for expanding the prototype</li>
               <li>Associated notes on how to go about it</li>
