--- a/collab.html
+++ b/collab.html
@@ -78,8 +78,28 @@
             <a class="anchor" id="goals"></a>
             <hr>
             <ul>
-              <li>A more formal list of features we'd like to include in future</li>
-              <li>Maybe again with notes about how to go about it</li>
+            <h3>Improving Sensor Management for Users</h3>
+            <p>One of the things we would like to improve on is administrator control. Right now, once an administrator has signed up to the website, the only thing he is able to do is add new sensors. Features we would like to include in the future include:</p>
+            <li>Editing existing sensors</li>
+            <li>Deleting existing sensors</li>
+            <li>Editing account settings</li>
+            <li>Sorting list of sensors</li>
+            <li>Alerts for when parking bays have exceeded the allowed maximum stay</li><p></p>
+            <p>Some of these things are quite simple to add, but we decided to push them out of our current scope, as they are unnecessary features. 
+            Right now we can manually edit sensors behind the scene and edit account settings, so they were not required to present the use of our system.</p>
+            <h3>Support for TCP connections</h3>
+            <p>Right now, our system only accepts UDP connections. We chose UDP, because it was simpler to implement with our chosen hardware, but TCP has some advantages over UDP. 
+            Although the rate at which data can be received is lower for TCP, the chance the data will get there is far higher. 
+            It is in-fact pretty much guaranteed. If you refer to our testing section on UDP, if we send 1000 packets per second, we lose about 5%. 
+            In a small scale system like ours, this is not something to worry about, but on an industrial scale, it can be very worrying.</p>
+            <h3>Usability Improvements for the Smart Parking Application</h3>
+            <p>Right now, the smart parking app is already very usable. It will show you on the map exactly where and when parking bays are available. It will even tell you what the nearest available one is.
+            Although there is of0course always room for improvement. Here is a list of future goals for the app:</p>
+            <li>The ability to guide you with GPS to your nearest available parking lot</li>
+            <li>The ability to search for specific streets or locations</li>
+            <li>Alerts for drivers currently parked in specific parking bays.</li><p></p>
+            <p>These features are not necessary for the launch of the app, but would make the app more user friendly and practical. 
+            We want to take it from simply showing you the bays to actually guiding you to them and alert you when you are close to staying for too long.</p>
             </ul>
             <!-- Architectural Diagrams -->
             <h2>Get Involved</h2>
