--- a/dev.html
+++ b/dev.html
@@ -93,7 +93,16 @@
             <a class="anchor" id="refs"></a>
             <hr>
             <ul>
-              <li>A list of any and all references we used, probably shorter than last time because this is less researchy</li>
+            <h3>Firmware References</h3>
+              <li>The Arduino website:  <a href="http://www.arduino.cc">http://www.arduino.cc</a></li>
+              <li>The Contiki website:  <a href="http://www.contiki-os.org">http://www.contiki-os.org</a></li>
+            <h3>Hardware References</h3>
+              <li>The Sensor board:     <a href="img/stamp.pdf" >Stamp.pdf</a></li>
+              <li>The Microcontroller:  <a href="img/MC1322x.pdf" >MC1322x.pdf</a></li>
+              <li>The Infra-Red Sensor: <a href="img/Sharp_gp2y0a02.pdf" >Sharp_gp2y0a02.pdf</a></li>
+              <li>ZigBee Documentation: <a href="img/ZigBee.pdf" >ZigBee.pdf</a></li>
+              <li>ZigBee Documentation: <a href="img/ZigBee.pdf" >ZigBee.pdf</a></li>
+              <li>The Arduino Mega: <a href="http://www.arduino.cc/en/Main/arduinoBoardMega2560" >http://www.arduino.cc/en/Main/arduinoBoardMega2560</a></li>
             </ul>
           </div>
         </div>
