--- a/collab.html
+++ b/collab.html
@@ -105,13 +105,12 @@
             <h2>Get Involved</h2>
             <a class="anchor" id="getinvolved"></a>
             <hr>
-            <ul>
-              <li>Details on areas of focus (e.g. "java backend", "contiki")</li>
-              <li>Links to the repo and forum</li>
-              <li>Links to the manual</li>
-              <li>Maybe contact details...???</li>
-            </ul>
-
+            <h4 style="font-weight: lighter">We're constantly evolving and looking into how we can better ourselves. If you have skills or interest in the areas of Big Data, networking, or sensor hardware, you're well-placed to play a founding role in the early stages of this project.</h4>
+            <h3>What's up next?</h3>
+            <p>Everything detailed above in 'next steps' is our primary focus. Largely they're quite straight-forward developments, so you may be more interested in 'future goals'. These outline more clearly the larger steps we want to make from where we are now to where the project could be in a year or so. If they're the kind of thing you have experience in, read on for details on helping us out.</p>
+            <h3>How to help</h3>
+            <p>First and foremost, it's important to us that you stay in the loop. It's best to use our <a href="http://orangesensorsapis.freeforums.net/">forums</a> for this - we'll be posting regular updates and keeping you alert for any open positions on the team</p>
+            <p>If you're interested in more details on how to make a start writing code for us, or for applications using the data, have a good look at the <a href="show.html#imp">implementation details</a> or the manuals for the <a href="api.html">APIs</a>.</p>
           </div>
         </div>
       </div>
